set(ProjectName YBehavior)  
  
INCLUDE_DIRECTORIES(../../include)  
  
AUX_SOURCE_DIRECTORY(. DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./nodes DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./3rd/pugixml DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./tools DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./network DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./fsm DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./types DIR_SRCS)  
AUX_SOURCE_DIRECTORY(./operations DIR_SRCS)  

SET(LIBRARY_OUTPUT_PATH ../lib/) 
  
ADD_LIBRARY(${PROJECT_NAME} STATIC ${DIR_SRCS})

